# shukatsu-ai

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  docker-compose.yml
.web/: bun.lockb  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/pages/: 404.js  index.js
.web/utils/: context.js
scrape/: request.py
